--- a/LogisticRegression_1.ipynb
+++ b/LogisticRegression_1.ipynb
@@ -6,7 +6,7 @@
       "name": "LogisticRegression 1.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyMgAOoMvrVabUiI0A2RjDiT",
+      "authorship_tag": "ABX9TyMoOMnnqg7i1T3jQVdXiK2M",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,30 +40,6 @@
       ],
       "execution_count": 0,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "MKjpYX0pfCNk",
-        "colab_type": "text"
-      },
-      "source": [
-        "Here are the variables that magazine reseller has on each customer from third-party sources:\n",
-        "Household Income (Income; rounded to the nearest $1,000.00)\n",
-        "Gender (IsFemale = 1 if the person is female, 0 otherwise)\n",
-        "Marital Status (IsMarried = 1 if married, 0 otherwise)\n",
-        "College Educated (HasCollege = 1 if has one or more years of college education, 0 otherwise)\n",
-        "Employed in a Profession (IsProfessional = 1 if employed in a profession, 0 otherwise)\n",
-        "Retired (IsRetired = 1 if retired, 0 otherwise)\n",
-        "Not employed (Unemployed = 1 if not employed, 0 otherwise)\n",
-        "Length of Residency in Current City (ResLength; in years)\n",
-        "Dual Income if Married (Dual = 1 if dual income, 0 otherwise)\n",
-        "Children (Minors = 1 if children under 18 are in the household, 0 otherwise)\n",
-        "Home ownership (Own = 1 if own residence, 0 otherwise)\n",
-        "Resident type (House = 1 if the residence is a single-family house, 0 otherwise)\n",
-        "Race (White = 1 if the race is white, 0 otherwise)\n",
-        "Language (English = 1 is the primary language in the household is English, 0 otherwise)"
-      ]
     },
     {
       "cell_type": "markdown",
@@ -162,7 +138,7 @@
       "source": [
         "from sklearn.preprocessing import LabelEncoder\n",
         "# creating initial dataframe\n",
-        "gender_types = ('Female','Male')\n",
+        "gender_types = ('Male','Female',)\n",
         "gender_df = pd.DataFrame(kidDataset, columns=['Gender'])\n",
         "# creating instance of labelencoder\n",
         "labelencoder = LabelEncoder()\n",
@@ -220,8 +196,6 @@
       },
       "source": [
         "kidDataset['Gender_num'] = gender_df['Gender_num']\n",
-        "kidDataset\n",
-        "kidDataset.pop('Gender')\n",
         "kidDataset"
       ],
       "execution_count": 0,
@@ -235,7 +209,7 @@
         "colab": {}
       },
       "source": [
-        "X = kidDataset[['Gender_num', 'Age', 'EstimatedSalary']]\n",
+        "X = kidDataset[['Age', 'EstimatedSalary','Gender_num']]\n",
         "y = kidDataset['Purchased']"
       ],
       "execution_count": 0,
@@ -250,6 +224,32 @@
       },
       "source": [
         "X_train,X_test,y_train,y_test=train_test_split(X,y,test_size=0.20,random_state=0)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uk2a1Uwh3tSi",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "X_train.Gender_num.value_counts()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MSa0pf5Q34Xa",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "y_train.value_counts()"
       ],
       "execution_count": 0,
       "outputs": []
