--- a/LogisticRegression_1.ipynb
+++ b/LogisticRegression_1.ipynb
@@ -6,7 +6,7 @@
       "name": "LogisticRegression 1.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyMoOMnnqg7i1T3jQVdXiK2M",
+      "authorship_tag": "ABX9TyOfOLWuKldoNeIC4dTTNlqG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -164,19 +164,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7n217YCCm0yo",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "gender_num.value_counts()"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "CrX58oaAm_0X",
         "colab_type": "code",
         "colab": {}
@@ -277,6 +264,19 @@
       },
       "source": [
         "y_pred=logreg.predict(X_test)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "97BnB9NWBmLx",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "y_pred"
       ],
       "execution_count": 0,
       "outputs": []
