--- a/TitanicLogReg.ipynb
+++ b/TitanicLogReg.ipynb
@@ -6,7 +6,7 @@
       "name": "TitanicLogReg.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyPRfE5ex5HxoI0VvFzjV3hs",
+      "authorship_tag": "ABX9TyObhMVOW7kBrpMgluBK9Q8K",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,11 +61,7 @@
         "%matplotlib inline\n",
         "\n",
         "# machine learning\n",
-        "from sklearn.linear_model import LogisticRegression\n",
-        "from sklearn.svm import SVC, LinearSVC\n",
-        "from sklearn.ensemble import RandomForestClassifier\n",
-        "from sklearn.neighbors import KNeighborsClassifier\n",
-        "from sklearn.naive_bayes import GaussianNB"
+        "from sklearn.linear_model import LogisticRegression"
       ],
       "execution_count": 0,
       "outputs": []
@@ -90,13 +86,26 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "3Wkya8HFMduo",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "test_df"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "uJBUIX6RI3HD",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
         "titanic_df.info()\n",
-        "print(\"----------------------------\")\n",
+        "print(\"----------------------------\\n\\n\")\n",
         "test_df.info()"
       ],
       "execution_count": 0,
@@ -125,7 +134,6 @@
         "colab": {}
       },
       "source": [
-        "\n",
         "# only in titanic_df, fill the two missing values with the most occurred value, which is \"S\".\n",
         "titanic_df[\"Embarked\"] = titanic_df[\"Embarked\"].fillna(\"S\")\n",
         "\n",
@@ -150,14 +158,14 @@
         "# OR, don't create dummy variables for Embarked column, just drop it, \n",
         "# because logically, Embarked doesn't seem to be useful in prediction.\n",
         "\n",
-        "embark_dummies_titanic  = pd.get_dummies(titanic_df['Embarked'])\n",
-        "embark_dummies_titanic.drop(['S'], axis=1, inplace=True)\n",
+        "#embark_dummies_titanic  = pd.get_dummies(titanic_df['Embarked'])\n",
+        "#embark_dummies_titanic.drop(['S'], axis=1, inplace=True)\n",
         "\n",
-        "embark_dummies_test  = pd.get_dummies(test_df['Embarked'])\n",
-        "embark_dummies_test.drop(['S'], axis=1, inplace=True)\n",
+        "#embark_dummies_test  = pd.get_dummies(test_df['Embarked'])\n",
+        "#embark_dummies_test.drop(['S'], axis=1, inplace=True)\n",
         "\n",
-        "titanic_df = titanic_df.join(embark_dummies_titanic)\n",
-        "test_df    = test_df.join(embark_dummies_test)\n",
+        "#titanic_df = titanic_df.join(embark_dummies_titanic)\n",
+        "#test_df    = test_df.join(embark_dummies_test)\n",
         "\n",
         "titanic_df.drop(['Embarked'], axis=1,inplace=True)\n",
         "test_df.drop(['Embarked'], axis=1,inplace=True)\n"
@@ -208,13 +216,9 @@
       },
       "source": [
         "# Age \n",
-        "\n",
         "fig, (axis1,axis2) = plt.subplots(1,2,figsize=(15,4))\n",
         "axis1.set_title('Original Age values - Titanic')\n",
         "axis2.set_title('New Age values - Titanic')\n",
-        "\n",
-        "# axis3.set_title('Original Age values - Test')\n",
-        "# axis4.set_title('New Age values - Test')\n",
         "\n",
         "# get average, std, and number of NaN values in titanic_df\n",
         "average_age_titanic   = titanic_df[\"Age\"].mean()\n",
@@ -233,7 +237,7 @@
         "# plot original Age values\n",
         "# NOTE: drop all null values, and convert to int\n",
         "titanic_df['Age'].dropna().astype(int).hist(bins=70, ax=axis1)\n",
-        "# test_df['Age'].dropna().astype(int).hist(bins=70, ax=axis1)\n",
+        "test_df['Age'].dropna().astype(int).hist(bins=70, ax=axis1)\n",
         "\n",
         "# fill NaN values in Age column with random values generated\n",
         "titanic_df[\"Age\"][np.isnan(titanic_df[\"Age\"])] = rand_1\n",
@@ -423,7 +427,20 @@
         "\n",
         "X_train = titanic_df.drop(\"Survived\",axis=1)\n",
         "Y_train = titanic_df[\"Survived\"]\n",
-        "X_test  = test_df.drop(\"PassengerId\",axis=1).copy()"
+        "X_test  = test_df.drop(\"PassengerId\",axis=1).copy()\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xNlBVDb6L6Uo",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "print(X_train)"
       ],
       "execution_count": 0,
       "outputs": []
