--- a/TitanicLogReg.ipynb
+++ b/TitanicLogReg.ipynb
@@ -6,7 +6,7 @@
       "name": "TitanicLogReg.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyObhMVOW7kBrpMgluBK9Q8K",
+      "authorship_tag": "ABX9TyNfpnIi7yr5ffW6ZE+3CfEE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,6 +52,7 @@
         "# pandas\n",
         "import pandas as pd\n",
         "from pandas import Series,DataFrame\n",
+        "from sklearn.model_selection import train_test_split \n",
         "\n",
         "# numpy, matplotlib, seaborn\n",
         "import numpy as np\n",
@@ -440,7 +441,21 @@
         "colab": {}
       },
       "source": [
-        "print(X_train)"
+        "print(X_train)\n",
+        "print(Y_train)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nJZcmWDvN-Xg",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "X_train2,X_test2,y_train2,y_test2=train_test_split(X_train,Y_train,test_size=0.20,random_state=0)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -457,11 +472,40 @@
         "\n",
         "logreg = LogisticRegression()\n",
         "\n",
-        "logreg.fit(X_train, Y_train)\n",
+        "logreg.fit(X_train2, y_train2)\n",
         "\n",
-        "Y_pred = logreg.predict(X_test)\n",
+        "Y_pred = logreg.predict(X_test2)\n",
         "\n",
-        "logreg.score(X_train, Y_train)"
+        "logreg.score(X_train2, y_train2)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3p-YEBlDPgZ1",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "Y_pred"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yHrSobemPMgr",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "df_check = pd.DataFrame()\n",
+        "df_check[\"test values\"] = y_test2\n",
+        "df_check[\"predictions\"] = Y_pred\n",
+        "df_check.head(20)"
       ],
       "execution_count": 0,
       "outputs": []
