--- a/TitanicLogReg.ipynb
+++ b/TitanicLogReg.ipynb
@@ -6,7 +6,7 @@
       "name": "TitanicLogReg.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyNfpnIi7yr5ffW6ZE+3CfEE",
+      "authorship_tag": "ABX9TyMF3/OR03ipxZ/gAtf4FjCJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,6 +60,7 @@
         "import seaborn as sns\n",
         "sns.set_style('whitegrid')\n",
         "%matplotlib inline\n",
+        "from sklearn import metrics\n",
         "\n",
         "# machine learning\n",
         "from sklearn.linear_model import LogisticRegression"
@@ -506,6 +507,20 @@
         "df_check[\"test values\"] = y_test2\n",
         "df_check[\"predictions\"] = Y_pred\n",
         "df_check.head(20)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4OqOm7uASBJT",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "cnf_matrix = metrics.confusion_matrix(y_test2, Y_pred)\n",
+        "cnf_matrix"
       ],
       "execution_count": 0,
       "outputs": []
