--- a/TitanicLogReg.ipynb
+++ b/TitanicLogReg.ipynb
@@ -6,7 +6,7 @@
       "name": "TitanicLogReg.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyMF3/OR03ipxZ/gAtf4FjCJ",
+      "authorship_tag": "ABX9TyMljxiKhEgzk8NRytkxJRlW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -109,6 +109,37 @@
         "titanic_df.info()\n",
         "print(\"----------------------------\\n\\n\")\n",
         "test_df.info()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jlzXB16sVurh",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "titanic_df.columns"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zgrErYS3VP7O",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import seaborn as sns\n",
+        "sns.set(style=\"white\")\n",
+        "\n",
+        "sns.relplot(x=\"Age\", y=\"Survived\",  size=\"Female\",\n",
+        "            sizes=(40, 400), alpha=.5, palette=\"bright\",\n",
+        "            height=6, data=titanic_df)"
       ],
       "execution_count": 0,
       "outputs": []
