--- a/LogisticRegression_1.ipynb
+++ b/LogisticRegression_1.ipynb
@@ -6,7 +6,7 @@
       "name": "LogisticRegression 1.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyOfOLWuKldoNeIC4dTTNlqG",
+      "authorship_tag": "ABX9TyNgD+4/8xMDlohs8gvmcZgW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -66,6 +66,7 @@
         "from sklearn.model_selection import train_test_split \n",
         "from sklearn.linear_model import LogisticRegression\n",
         "from sklearn import metrics\n",
+        "from sklearn import preprocessing\n",
         "%matplotlib inline\n",
         "import warnings\n",
         "warnings.filterwarnings('ignore')"
@@ -118,6 +119,24 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "LQh-rT2lUapJ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import seaborn as sns\n",
+        "sns.set(style=\"white\")\n",
+        "\n",
+        "sns.relplot(x=\"EstimatedSalary\", y=\"Purchased\",  size=\"Age\",\n",
+        "            sizes=(40, 400), alpha=.5, palette=\"bright\",\n",
+        "            height=6, data=kidDataset)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "UOesASTbgRK6",
         "colab_type": "code",
         "colab": {}
@@ -138,7 +157,7 @@
       "source": [
         "from sklearn.preprocessing import LabelEncoder\n",
         "# creating initial dataframe\n",
-        "gender_types = ('Male','Female',)\n",
+        "gender_types = ('Female','Male')\n",
         "gender_df = pd.DataFrame(kidDataset, columns=['Gender'])\n",
         "# creating instance of labelencoder\n",
         "labelencoder = LabelEncoder()\n",
@@ -196,8 +215,8 @@
         "colab": {}
       },
       "source": [
-        "X = kidDataset[['Age', 'EstimatedSalary','Gender_num']]\n",
-        "y = kidDataset['Purchased']"
+        "X=kidDataset[['Gender_num','Age', 'EstimatedSalary']]\n",
+        "y = kidDataset['Purchased']\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -211,19 +230,6 @@
       },
       "source": [
         "X_train,X_test,y_train,y_test=train_test_split(X,y,test_size=0.20,random_state=0)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "uk2a1Uwh3tSi",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "X_train.Gender_num.value_counts()"
       ],
       "execution_count": 0,
       "outputs": []
@@ -258,6 +264,19 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "xE7GzM8oSdrX",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "logreg.score(X_train, y_train)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "bnWtaTGAlwWw",
         "colab_type": "code",
         "colab": {}
@@ -271,12 +290,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "97BnB9NWBmLx",
+        "id": "ZkfT_I7yTfBX",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "y_pred"
+        "y_train"
       ],
       "execution_count": 0,
       "outputs": []
@@ -284,13 +303,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zPJ9zIfioGA0",
+        "id": "97BnB9NWBmLx",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "pred_df = pd.DataFrame(y_pred, y_test)\n",
-        "pred_df.head(20)"
+        "y_pred"
       ],
       "execution_count": 0,
       "outputs": []
