--- a/LogReg_Titanic.ipynb
+++ b/LogReg_Titanic.ipynb
@@ -6,7 +6,7 @@
       "name": "LogReg Titanic.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyMljxiKhEgzk8NRytkxJRlW",
+      "authorship_tag": "ABX9TyOmW+sglWuZFovFUiHI5ooB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -137,7 +137,7 @@
         "import seaborn as sns\n",
         "sns.set(style=\"white\")\n",
         "\n",
-        "sns.relplot(x=\"Age\", y=\"Survived\",  size=\"Female\",\n",
+        "sns.relplot(x=\"Age\", y=\"Survived\",  size=\"Sex\",\n",
         "            sizes=(40, 400), alpha=.5, palette=\"bright\",\n",
         "            height=6, data=titanic_df)"
       ],
