--- a/LogisticRegression_1.ipynb
+++ b/LogisticRegression_1.ipynb
@@ -6,7 +6,7 @@
       "name": "LogisticRegression 1.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyM88LVkmHvYauhxEr3V+JIM",
+      "authorship_tag": "ABX9TyPddyMDT/YXcfUJpAAVi57P",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +48,8 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "from sklearn.linear_model import LogisticRegression\n",
-        "from sklearn import metrics"
+        "from sklearn import metrics\n",
+        "import seaborn as sns"
       ],
       "execution_count": 0,
       "outputs": []
@@ -459,7 +460,7 @@
         "colab": {}
       },
       "source": [
-        "glass['high_ba']"
+        "glass['ba']"
       ],
       "execution_count": 0,
       "outputs": []
@@ -473,7 +474,83 @@
       },
       "source": [
         "# create a categorical feature\n",
-        "glass['high_ba'] = np.where(glass.ba > 0.5, 1, 0)"
+        "glass['high_ba'] = np.where(glass.ba > 0.5, 1, 0)\n",
+        "glass['high_ba']"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vSR8XQGLGthV",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# original (continuous) feature\n",
+        "fig = sns.lmplot(x='ba', y='household', data=glass, ci=None, logistic=True)\n",
+        "fig.set(xlim=(-0.5,3))\n",
+        "plt.show()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DqZskDofHLfS",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# categorical feature\n",
+        "sns.lmplot(x='high_ba', y='household', data=glass, ci=None, logistic=True)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "F8i1pPgzLsY_",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# categorical feature, with jitter added\n",
+        "sns.lmplot(x='high_ba', y='household', data=glass, ci=None, logistic=True, x_jitter=0.05, y_jitter=0.05)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GygmxwHvLwkl",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# fit a logistic regression model\n",
+        "feature_cols = ['high_ba']\n",
+        "X = glass[feature_cols]\n",
+        "y = glass.household\n",
+        "logreg.fit(X, y)\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "73MHmZMYL0fq",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# examine the coefficient for high_ba\n",
+        "feature_cols, logreg.coef_[0]"
       ],
       "execution_count": 0,
       "outputs": []
