--- a/LogisticRegression_1.ipynb
+++ b/LogisticRegression_1.ipynb
@@ -6,7 +6,7 @@
       "name": "LogisticRegression 1.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyPddyMDT/YXcfUJpAAVi57P",
+      "authorship_tag": "ABX9TyNPaBv1a3slXyFtIirOux6P",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -72,6 +72,23 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GAVodpttVe9L",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "sns.set(style=\"white\")\n",
+        "\n",
+        "sns.relplot(x=\"glass_type\", y=\"al\", \n",
+        "            sizes=(40, 400), alpha=.5, palette=\"bright\",\n",
+        "            height=6, data=glass)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "rN2yIW8EBmZ7",
@@ -126,6 +143,24 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "14h44t2AWTJM",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "sns.set(style=\"white\")\n",
+        "\n",
+        "sns.relplot(x=\"household\", y=\"al\", \n",
+        "            sizes=(40, 400), alpha=.5, palette=\"bright\",\n",
+        "            height=6, data=glass)\n",
+        "plt.show()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "eJUzkM-YCaJg",
@@ -170,6 +205,24 @@
         "feature_cols = ['al']\n",
         "X = glass[feature_cols]\n",
         "y = glass.household"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HyCz5fHLWebU",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "sns.set(style=\"white\")\n",
+        "\n",
+        "sns.relplot(x=\"al\", y=\"household\", \n",
+        "            sizes=(40, 400), alpha=.5, palette=\"bright\",\n",
+        "            height=6, data=glass)\n",
+        "plt.show()"
       ],
       "execution_count": 0,
       "outputs": []
@@ -268,6 +321,24 @@
       "source": [
         "cnf_matrix = metrics.confusion_matrix(glass['household'],glass['household_pred_class'])\n",
         "cnf_matrix"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UDJbb_2EWzo6",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "sns.set(style=\"white\")\n",
+        "\n",
+        "sns.relplot(x=\"glass_type\", y=\"al\", hue=\"household_pred_class\", \n",
+        "            sizes=(40, 400), alpha=.5, palette=\"bright\",\n",
+        "            height=6, data=glass)\n",
+        "plt.show()"
       ],
       "execution_count": 0,
       "outputs": []
