--- a/LogisticRegression_1.ipynb
+++ b/LogisticRegression_1.ipynb
@@ -6,7 +6,7 @@
       "name": "LogisticRegression 1.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyNPaBv1a3slXyFtIirOux6P",
+      "authorship_tag": "ABX9TyOTkLWYoMLyIHpSHCZQv2wx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -541,10 +541,10 @@
       "metadata": {
         "id": "ZbvveVDKF1OG",
         "colab_type": "code",
-        "colab": {}
+        "colab": {},
+        "cellView": "both"
       },
       "source": [
-        "# create a categorical feature\n",
         "glass['high_ba'] = np.where(glass.ba > 0.5, 1, 0)\n",
         "glass['high_ba']"
       ],
