--- a/Logistic_Regression_3.ipynb
+++ b/Logistic_Regression_3.ipynb
@@ -6,7 +6,7 @@
       "name": "Logistic Regression 3.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyMEjpAVXK+DZQP6/8NQgWpZ",
+      "authorship_tag": "ABX9TyNa0u60G+7ohANpzW+WhLJd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -154,6 +154,20 @@
       "source": [
         "# all parameters not specified are set to their defaults\n",
         "logisticRegr = LogisticRegression()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GC0TQWILZL7E",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "print(x_train.shape)\n",
+        "print(y_train.shape)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -320,37 +334,22 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "33rCDa23M1MT",
-        "colab_type": "text"
-      },
-      "source": [
-        "https://towardsdatascience.com/logistic-regression-using-python-sklearn-numpy-mnist-handwriting-recognition-matplotlib-a6b31e2b166a\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "xSHnb5qkjw6e",
-        "colab_type": "text"
-      },
-      "source": [
-        "# **EXAMPLE**"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
-        "id": "qvztc6fEk_od",
+        "id": "5fHeeIDKagRn",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "# Clone the entire repo.\n",
-        "!git clone -l -s https://github.com/cagBRT/Machine-Learning.git cloned-repo\n",
-        "%cd cloned-repo\n",
-        "!ls"
+        "index = 0\n",
+        "misclassifiedIndexes = []\n",
+        "misclassifiedIndexes2 = []\n",
+        "for label, predict in zip(y_test, predictions):\n",
+        " if label != predict: \n",
+        "  print(label, predict)\n",
+        "  misclassifiedIndexes.append(label)\n",
+        "  misclassifiedIndexes2.append(predict)\n",
+        "  index +=1"
       ],
       "execution_count": 0,
       "outputs": []
@@ -358,134 +357,17 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Zo7ZZzQ8lHS2",
+        "id": "s4QmB_TCa4I-",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "from IPython.display import Image\n",
-        "def page(num):\n",
-        "    #print(str(num))\n",
-        "    return Image(\"Intro to Machine Learning Programming (\"+ str(num) + \").png\")\n",
-        "print(\"done\")"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "TbOmNzewjwe5",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "import pandas as pd\n",
-        "import numpy as np\n",
-        "from sklearn import preprocessing\n",
-        "import matplotlib.pyplot as plt \n",
-        "plt.rc(\"font\", size=14)\n",
-        "from sklearn.linear_model import LogisticRegression\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "import seaborn as sns\n",
-        "sns.set(style=\"white\")\n",
-        "sns.set(style=\"whitegrid\", color_codes=True)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "oOg0I3wOlUI4",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "data = pd.read_csv('bank.csv', sep=\";\",error_bad_lines=False, skipinitialspace = True, quotechar='\"')\n",
-        "dataframe = pd.DataFrame(data)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "pC8ZSEm7lkIZ",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "dataframe.tail(10)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "QNj-4zsrkCPq",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "dataframe = dataframe.dropna()\n",
-        "dataframe.shape\n",
-        "dataframe.columns"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "7eQharSFnyb2",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "dataframe[\"education\"]"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "kKYKzxpMj5c3",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "dataframe['education']=np.where(dataframe['education'] =='primary', 'Basic', dataframe['education'])\n",
-        "dataframe['education']=np.where(dataframe['education'] =='secondary', 'Basic', dataframe['education'])\n",
-        "dataframe['education']=np.where(dataframe['education'] =='tertiary', 'Basic', dataframe['education'])"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "6KSeZJmiofE-",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "dataframe['education'].unique()"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "HXoy3Wm8omBO",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "dataframe['y'].value_counts"
+        "plt.figure(figsize=(20,4))\n",
+        "for plotIndex, badIndex in enumerate(misclassifiedIndexes[0:5]):\n",
+        " plt.subplot(1, 5, plotIndex + 1)\n",
+        " plt.imshow(np.reshape(x_test[badIndex], (8,8)), cmap=plt.cm.gray)\n",
+        " plt.title(\"Predicted {}, Actual {}\".format(misclassifiedIndexes2[plotIndex], misclassifiedIndexes[plotIndex]), fontsize = 15)\n",
+        " "
       ],
       "execution_count": 0,
       "outputs": []
