--- a/Logistic_Regression_4.ipynb
+++ b/Logistic_Regression_4.ipynb
@@ -6,7 +6,7 @@
       "name": "Logistic Regression 4.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyM6t3GR4RPkCReHqMnVFpaB",
+      "authorship_tag": "ABX9TyPiZxYMoZBoN1nsPHGwGUCz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -70,36 +70,36 @@
         "colab_type": "text"
       },
       "source": [
-        "Attribute Information:\n",
+        "**Attribute Information:**\n",
         "\n",
-        "Input variables:\n",
-        "# bank client data:\n",
-        "1 - age (numeric)\n",
-        "2 - job : type of job (categorical: 'admin.','blue-collar','entrepreneur','housemaid','management','retired','self-employed','services','student','technician','unemployed','unknown')\n",
-        "3 - marital : marital status (categorical: 'divorced','married','single','unknown'; note: 'divorced' means divorced or widowed)\n",
-        "4 - education (categorical: 'basic.4y','basic.6y','basic.9y','high.school','illiterate','professional.course','university.degree','unknown')\n",
-        "5 - default: has credit in default? (categorical: 'no','yes','unknown')\n",
-        "6 - housing: has housing loan? (categorical: 'no','yes','unknown')\n",
-        "7 - loan: has personal loan? (categorical: 'no','yes','unknown')\n",
-        "# related with the last contact of the current campaign:\n",
-        "8 - contact: contact communication type (categorical: 'cellular','telephone')\n",
-        "9 - month: last contact month of year (categorical: 'jan', 'feb', 'mar', ..., 'nov', 'dec')\n",
-        "10 - day_of_week: last contact day of the week (categorical: 'mon','tue','wed','thu','fri')\n",
-        "11 - duration: last contact duration, in seconds (numeric). Important note: this attribute highly affects the output target (e.g., if duration=0 then y='no'). Yet, the duration is not known before a call is performed. Also, after the end of the call y is obviously known. Thus, this input should only be included for benchmark purposes and should be discarded if the intention is to have a realistic predictive model.\n",
+        "Input variables:<br>\n",
+        "# bank client data:<br>\n",
+        "1 - age (numeric)<br>\n",
+        "2 - job : type of job (categorical: 'admin.','blue-collar','entrepreneur','housemaid','management','retired','self-employed','services','student','technician','unemployed','unknown')<br>\n",
+        "3 - marital : marital status (categorical: 'divorced','married','single','unknown'; note: 'divorced' means divorced or widowed)<br>\n",
+        "4 - education (categorical: 'basic.4y','basic.6y','basic.9y','high.school','illiterate','professional.course','university.degree','unknown')<br>\n",
+        "5 - default: has credit in default? (categorical: 'no','yes','unknown')<br>\n",
+        "6 - housing: has housing loan? (categorical: 'no','yes','unknown')<br>\n",
+        "7 - loan: has personal loan? (categorical: 'no','yes','unknown')<br>\n",
+        "# related with the last contact of the current campaign:<br>\n",
+        "8 - contact: contact communication type (categorical: 'cellular','telephone')<br>\n",
+        "9 - month: last contact month of year (categorical: 'jan', 'feb', 'mar', ..., 'nov', 'dec')<br>\n",
+        "10 - day_of_week: last contact day of the week (categorical: 'mon','tue','wed','thu','fri')<br>\n",
+        "11 - duration: last contact duration, in seconds (numeric). Important note: this attribute highly affects the output target (e.g., if duration=0 then y='no'). Yet, the duration is not known before a call is performed. Also, after the end of the call y is obviously known. Thus, this input should only be included for benchmark purposes and should be discarded if the intention is to have a realistic predictive model.<br>\n",
         "# other attributes:\n",
-        "12 - campaign: number of contacts performed during this campaign and for this client (numeric, includes last contact)\n",
-        "13 - pdays: number of days that passed by after the client was last contacted from a previous campaign (numeric; 999 means client was not previously contacted)\n",
-        "14 - previous: number of contacts performed before this campaign and for this client (numeric)\n",
-        "15 - poutcome: outcome of the previous marketing campaign (categorical: 'failure','nonexistent','success')\n",
-        "# social and economic context attributes\n",
-        "16 - emp.var.rate: employment variation rate - quarterly indicator (numeric)\n",
-        "17 - cons.price.idx: consumer price index - monthly indicator (numeric)\n",
-        "18 - cons.conf.idx: consumer confidence index - monthly indicator (numeric)\n",
-        "19 - euribor3m: euribor 3 month rate - daily indicator (numeric)\n",
-        "20 - nr.employed: number of employees - quarterly indicator (numeric)\n",
+        "12 - campaign: number of contacts performed during this campaign and for this client (numeric, includes last contact)<br>\n",
+        "13 - pdays: number of days that passed by after the client was last contacted from a previous campaign (numeric; 999 means client was not previously contacted)<br>\n",
+        "14 - previous: number of contacts performed before this campaign and for this client (numeric)<br>\n",
+        "15 - poutcome: outcome of the previous marketing campaign (categorical: 'failure','nonexistent','success')<br>\n",
+        "# social and economic context attributes<br>\n",
+        "16 - emp.var.rate: employment variation rate - quarterly indicator (numeric)<br>\n",
+        "17 - cons.price.idx: consumer price index - monthly indicator (numeric)<br>\n",
+        "18 - cons.conf.idx: consumer confidence index - monthly indicator (numeric)<br>\n",
+        "19 - euribor3m: euribor 3 month rate - daily indicator (numeric)<br>\n",
+        "20 - nr.employed: number of employees - quarterly indicator (numeric)<br>\n",
         "\n",
-        "Output variable (desired target):\n",
-        "21 - y - has the client subscribed a term deposit? (binary: 'yes','no')"
+        "Output variable (desired target):<br>\n",
+        "21 - y - has the client subscribed a term deposit? (binary: 'yes','no')<br>"
       ]
     },
     {
